--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -204,5 +204,5 @@ fr:
       default: "%d %B %Y %Hh %Mmin %Ss"
       long: "%A %d %B %Y %Hh%M"
       short: "%d %b %Hh%M"
-      morejformat: "%A %d %B %Y"
+      morejformat: "%d %B %Y"
     pm: pm
